# head-hunter

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Readme.md  docker-compose.yaml  isort.cfg  main.py  pyproject.toml  requirements.txt
.docker/web/: Dockerfile
alembic/: env.py
alembic/versions/: 2024_05_29_1922-0476b04db854_create_resume_model.py  2024_05_29_1941-4ed76849369d_create_vacancy_model.py  2024_05_29_1954-6aaeaf2097ec_update_vacansy_to_vacansies.py  2024_05_31_0946-ac9ade60440c_create_user_table.py  2024_06_01_0034-0378e2bceb56_ad_image_to_resume.py  2024_06_01_1528-1e638bd242b7_create_contact_table.py  2024_06_01_1533-00f6096fcf6f_create_relation_between_resume_and_.py  2024_06_01_1619-a2acbfefa502_update_contact_model.py  2024_06_02_2217-89615bad87f9_update_vacansy_table.py  2024_06_02_2347-3a2f1bc334c5_ad_username_to_user.py  2024_06_05_1658-fe8c01363430_create_favorite_table.py  2024_06_05_1703-1353e97507fd_ad_m2m.py  2024_06_05_1711-208d2947c02b_ad_uniq.py  2024_06_06_0004-fabd93e69c14_update_favorite_table.py  2024_06_06_1507-28a34bbca858_update_user_model.py  2024_06_07_1727-bf6c4fb72c23_update_resume_model.py  2024_06_08_1635-1f5ada94b8a8_ad_token_to_user.py  2024_06_08_1710-a062bd5b5155_update_user_toekn.py
api/: __init__.py
api/auth/: __init__.py  schemas.py  utils.py  views.py
api/contacts/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
api/email/: __init__.py  celery.py  tasks.py  views.py
core/: config.py
prometheus/: prometheus.yaml
tests/: database.py  test_resume.py
utils/: case_converter.py
(+75 files in other folders)
