[tool.poetry]
name = "head-hunter"
version = "0.1.0"
description = ""
authors = ["Pasha Ryaguzov <pashajobber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.111.0"}
poetry-core = "^1.9.0"
celery = "^5.4.0"
asyncpg = "^0.29.0"
amqp = "^5.2.0"
alembic = "^1.13.1"
black = "^24.4.2"
flake8 = "^7.0.0"
pillow = "^10.3.0"
rabbitmq = "^0.2.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.3"
aioredis = "^2.0.1"
redis = "^5.0.5"
pydantic-settings = "^2.3.1"
aiobotocore = "^2.13.0"
bcrypt = "^4.1.3"
passlib = "^1.7.4"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
